@@ -154,6 +154,10 @@
 		<Unit filename="src/PlayList.h" />
 		<Unit filename="src/PlayListAppend.cpp" />
 		<Unit filename="src/PlayListAppend.h" />
+		<Unit filename="src/PlayListFile.cpp" />
+		<Unit filename="src/PlayListFile.h" />
+		<Unit filename="src/PlayListFiles.cpp" />
+		<Unit filename="src/PlayListFiles.h" />
 		<Unit filename="src/PlayListPanel.cpp" />
 		<Unit filename="src/PlayListPanel.h" />
 		<Unit filename="src/PlayerPanel.cpp" />
