@@ -176,6 +176,8 @@ enum guCommandIds {
     ID_PLAYLIST_DELETE,
     ID_PLAYLIST_COPYTO,
     ID_PLAYLIST_UPDATED,
+    ID_PLAYLIST_IMPORT,
+    ID_PLAYLIST_EXPORT,
     //
     ID_PODCASTS_CHANNEL_ADD,
     ID_PODCASTS_CHANNEL_DEL,
